[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotorcli"
version = "1.2.1"
description = "A build tool for KOTOR projects (cli-compatible syntax)"
authors = [
    {name = "PyKotor Contributors"}
]
maintainers = [{name = "th3w1zard1", email = "halomastar@gmail.com"}]
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "cli", "build-tool", "automation",
    "modding", "nwscript", "pykotor",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
]

dependencies = [
    "pykotor>=2.0.2",
    "tomli>=2.0.0; python_version<'3.11'",
    "tomli-w>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
kotorcli = "kotorcli.__main__:main"
kitgenerator = "kotorcli.__main__:kitgenerator_entry"
kit-generator = "kotorcli.__main__:kitgenerator_entry"
gui-converter = "kotorcli.__main__:gui_converter_entry"
guiconverter = "kotorcli.__main__:gui_converter_entry"
kotordiff = "kotorcli.__main__:kotordiff_entry"
kotor-diff = "kotorcli.__main__:kotordiff_entry"
diff-installation = "kotorcli.__main__:kotordiff_entry"

[project.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"
Changelog = "https://github.com/OldRepublicDevs/PyKotor/releases"

# Poetry configuration
[tool.poetry]
name = "kotorcli"
version = "1.2.1"
description = "A build tool for KOTOR projects (cli-compatible syntax)"
authors = ["PyKotor Contributors", "Benjamin Auquite <halomastar@gmail.com>"]
maintainers = ["Benjamin Auquite <halomastar@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "kotorcli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
pykotor = "^2.0.2"
tomli = {version = ">=2.0.0", python = "<3.11"}
tomli-w = ">=1.0.0"

[tool.poetry.scripts]
kotorcli = "kotorcli.__main__:main"
kitgenerator = "kotorcli.__main__:kitgenerator_entry"
kit-generator = "kotorcli.__main__:kitgenerator_entry"
gui-converter = "kotorcli.__main__:gui_converter_entry"
guiconverter = "kotorcli.__main__:gui_converter_entry"

[tool.poetry.urls]
Homepage = "https://github.com/OldRepublicDevs/PyKotor"
Repository = "https://github.com/OldRepublicDevs/PyKotor.git"
Issues = "https://github.com/OldRepublicDevs/PyKotor/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kotorcli*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "TRY003",  # Avoid specifying long messages outside exception class
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "E402",    # Module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["PLR2004", "S101"]



