[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kotormcp"
version = "0.1.1"
description = "Model Context Protocol server exposing Knights of the Old Republic resources for AI agents."
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
license = {text = "LGPL-3.0-or-later"}
authors = [
    {name = "th3w1zard1"}
]
maintainers = [
    {name = "th3w1zard1", email = "halomastar@gmail.com"}
]
keywords = [
    "kotor", "kotor1", "kotor2", "tsl",
    "mcp", "model-context-protocol",
    "ai", "llm", "agent",
    "modding", "game-resources",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Environment :: Console",
    "Typing :: Typed",
]
dependencies = [
    "mcp>=0.1.1",
    "pykotor>=2.0.2",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.5.3",
    "mypy>=1.0.0",
]

[project.scripts]
kotormcp = "kotormcp.server:main"

[project.urls]
Homepage = "https://github.com/th3w1zard1/KotorMCP"
Documentation = "https://github.com/OldRepublicDevs/PyKotor/wiki"
Repository = "https://github.com/th3w1zard1/KotorMCP.git"
Issues = "https://github.com/th3w1zard1/KotorMCP/issues"
Changelog = "https://github.com/th3w1zard1/KotorMCP/releases"

[tool.setuptools.packages.find]
where = ["src"]
include = ["kotormcp*"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    "EM",  # flake8-errmsg
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "TRY003",  # Avoid specifying long messages outside exception class
    "PLR0913", # Too many arguments
    "PLR2004", # Magic value used in comparison
    "E402",    # Module level import not at top of file
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"test_*.py" = ["PLR2004", "S101"]

