[tool.poetry]
name = "pykotor-gui"
version = "0.1.0"
description = "GUI interface for PyKotor using Streamlit"
authors = ["PyKotor Team"]

[tool.poetry.dependencies]
python = "^3.7"
streamlit = "^1.24.0"
pykotor = {path = "../../Libraries/PyKotor"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
